--- a/src/components/Kennel.css
+++ b/src/components/Kennel.css
@@ -2,4 +2,7 @@
     display: flex;
     justify-content: space-around;
     flex-direction: row;
+    border: 4px solid grey;
+    border-radius: 5px;
 }
+
