updated locationList to use props passed down from Kennel

--- a/src/components/location/LocationList.css
+++ b/src/components/location/LocationList.css
@@ -9,3 +9,10 @@
     border-radius: 5px;
 }
 
+.locations {
+    border: 2px dotted hotpink;
+    border-radius: 3px;
+    margin: 5px;
+    padding: 5px;
+}
+
