--- a/src/components/Kennel.css
+++ b/src/components/Kennel.css
@@ -1,8 +1,9 @@
 .kennel {
     display: flex;
+    background-color: burlywood;
     justify-content: space-around;
     flex-direction: row;
     border: 4px solid grey;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
