--- a/src/components/employee/EmployeeList.css
+++ b/src/components/employee/EmployeeList.css
@@ -2,11 +2,11 @@
     /* display: flex; */
     margin: 10px;
     padding: 10px;
-    /* background-color: burlywood; */
+    background-color: whitesmoke;
     justify-content: space-around;
     flex-direction: row;
-    border: 4px solid burlywood;
-    border-radius: 5px;
+    border: 4px solid grey;
+    border-radius: 20px;
 }
 
 .employees {
