--- a/src/components/location/LocationList.css
+++ b/src/components/location/LocationList.css
@@ -1,17 +1,17 @@
 .locationList {
-    /* display: flex; */
+    display: flex;
     margin: 10px;
     padding: 10px;
-    /* background-color: burlywood; */
+    background-color: whitesmoke;
     justify-content: space-around;
     flex-direction: row;
     border: 4px solid grey;
-    border-radius: 5px;
+    border-radius: 20px;
 }
 
 .locations {
-    border: 2px dotted hotpink;
-    border-radius: 3px;
+    border: 5px solid hotpink;
+    border-radius: 20px;
     margin: 5px;
     padding: 5px;
 }
