--- a/src/components/location/LocationList.css
+++ b/src/components/location/LocationList.css
@@ -4,15 +4,15 @@
     padding: 10px;
     background-color: whitesmoke;
     justify-content: space-around;
-    flex-direction: row;
+    flex-direction: column;
     border: 4px solid grey;
     border-radius: 20px;
 }
 
 .locations {
-    border: 5px solid hotpink;
+    border: 5px solid blue;
     border-radius: 20px;
-    margin: 5px;
-    padding: 5px;
+    margin: 25px;
+    padding: 25px;
 }
 
