--- a/src/components/location/LocationList.css
+++ b/src/components/location/LocationList.css
@@ -1,7 +1,9 @@
 .locationList {
     display: flex;
-    margin: 10px;
-    padding: 10px;
+    /* margin: 10px; */
+    margin-top: 40px;
+    padding-top: 30px;
+    /* padding: 10px; */
     background-color: whitesmoke;
     justify-content: space-around;
     flex-direction: column;
