--- a/src/components/Kennel.css
+++ b/src/components/Kennel.css
@@ -1,9 +1,10 @@
 .kennel {
     display: flex;
-    background-color: burlywood;
     justify-content: space-around;
     flex-direction: row;
     border: 4px solid grey;
     border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
-
+ 
